resources/scss/theme/_common.scss
/*////////////////*/
/* GENERAL STYLES */
/*////////////////*/
::-webkit-scrollbar {
    width: 8px;
    height: 8px;
}

::-webkit-scrollbar-track {
    background-color: $grey;
}

::-webkit-scrollbar-thumb {
    border-radius: 8px;
    background-color: $blue;
}

main,
.img,
.banner-img,
.banner-map,
.contact,
.video,
.zoom,
.relative {
    position: relative;
}

html {
    height: 100%;
}

body {
    height: 100%;
    overflow: hidden;
}

main {
    overflow: hidden;
    margin-top: 110px;
    padding-top: 20px;
}

.overflow-hidden,
html.overflow-hidden body {
    overflow: hidden;
}

.swiper-slide:not(:first-child) {
    display: none;
}

.spacer-xl,
.spacer-lg,
.spacer-md,
.spacer-sm,
.spacer-xs {
    clear: both;
}

.spacer-xl {
    height: 130px;
}

.spacer-lg {
    height: 100px;
}

.spacer-md {
    height: 60px;
}

.spacer-sm {
    height: 40px;
}

.spacer-xs {
    height: 30px;
}

.spacer-xxs {
    height: 15px;
}

.container {
    max-width: 1300px;
    width: 100%;
}

.row {
    &.short-distance {
        margin: 0 -10px;

        > div {
            padding: 0 10px;
        }
    }
}

.full-size {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
}

hr {
    height: 0;
    margin: 0;
    border: 0;
    border-top: 1px solid $border;
}

.seo-text {
    .more-info {
        display: none;

        &.active {
            display: block;
        }
    }
}

.full-info {
    overflow: hidden;
    text-overflow: ellipsis;
    height: 100px;
    transition: height linear 440ms;

    &.active {
        height: auto;
    }

}

.filter-result-bar,
.filter-result-bar label {
    display: flex;
    align-items: center;
}

.filter-result-bar {
    > span {
        margin-right: auto;
    }

    > label {
        font-size: 0;
        margin-bottom: 0;
        margin-right: 35px;

        &:last-child {
            margin-right: 0;
        }

        span,
        select {
            min-width: 95px;
            display: inline-block;
            vertical-align: middle;
        }

        > span {
            color: $title;
            font-weight: 500;
            margin-right: 15px;
        }

        .SumoSelect {
            margin-bottom: 0;
        }
    }
}

.img {
    img {
        width: 100%;
        display: block;
        max-width: 100%;
    }

    &.img-border {
        overflow: hidden;
        border-radius: 5px;
        margin-bottom: 30px;

        &.img-caption {
            margin-bottom: 20px;
            padding-bottom: 60px;

            &:before {
                top: 0;
                left: 0;
                right: 0;
                bottom: 0;
                content: '';
                z-index: -1;
                position: absolute;
                border-radius: 5px;
                background-color: #fff;
                border: 1px solid $border;
            }

            .top-part {
                padding: 15px 20px;
                border-radius: 5px 5px 0 0;
                background-color: $orange;

                & + .zoom {
                    & + .img-caption-info {
                        .guide-name {
                            height: auto;
                        }
                    }
                }
            }

            .zoom {
                .full-size {
                    cursor: pointer;
                }
            }

            .contact {
                font-size: 14px;
                line-height: 20px;
                padding-left: 0;

                .img {
                    top: auto;
                    left: auto;
                    margin-right: 5px;
                    position: relative;
                    display: inline-block;
                    vertical-align: middle;

                }
            }

            hr {
                margin-bottom: 15px;
            }

            .btn {
                left: 20px;
                right: 20px;
                bottom: 20px;
                position: absolute;

                &.btn-block {
                    width: auto;
                }
            }
        }
    }
}

.img-caption-title,
.img-caption-info {
    padding: 16px 20px;
    margin-bottom: -25px;
}

.img-caption-info {
    .h3 {
        font-weight: 700;
        overflow: hidden;
        display: -webkit-box;
        -webkit-line-clamp: 2;
        -webkit-box-orient: vertical;
    }
}

.guide-name {
    height: 77px;
    margin-bottom: 10px;

    .h3 {
        margin-bottom: 5px;
    }

    & + .text {
        display: block;
        margin-bottom: 15px;
    }
}

.banner-img,
.banner-map {
    overflow: hidden;
    border-radius: 18px;
}

.banner-img {
    img {
        width: 100%;
        display: block;
    }
}

.banner-map {
    padding-top: 55.027%;
}
/* ... */

